--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start": "node server.js",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "lodash": "^4.17.4",
     "vue": "^2.5.2"
   },
